# extract-transform-load

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DB_INDEX.md  LICENSE  MIGRATION_GUIDE.md  README.md  UPDATE.TESTNET.md  UPDATE.md  endpoints.md  entities.md  etl.conf  leases.json
crates/etl-api/: Cargo.toml
crates/etl-api/src/: csv_response.rs  error.rs  main.rs  server.rs
crates/etl-api/src/controller/: leases.rs  liquidity.rs  metrics.rs  misc.rs  pnl.rs  positions.rs  protocols.rs  treasury.rs
crates/etl-api/src/handler/: cache_refresher.rs  mod.rs
crates/etl-core/: Cargo.toml
crates/etl-core/src/: configuration.rs  error.rs  lib.rs  migration.rs  push.rs
crates/etl-core/src/dao/postgre/: action_history.rs  block.rs  currency_protocol.rs  lp_lender_state.rs  lp_pool_state.rs  ls_auto_close_position.rs  ls_close_position.rs  ls_liquidation.rs  ls_liquidation_warning.rs  ls_opening.rs  ls_state.rs  mod.rs  mp_asset.rs  pl_state.rs  pool_config.rs  protocol_registry.rs  raw_message.rs  tr_state.rs  types.rs
crates/etl-core/src/helpers/: enums.rs  mod.rs  time_window.rs
crates/etl-core/src/model/: mod.rs  models.rs
crates/etl-core/src/provider/: database.rs  grpc.rs  mod.rs
crates/etl-core/src/types/: common.rs  mod.rs
crates/etl-ingest/: Cargo.toml
crates/etl-ingest/src/: event_dispatch.rs  event_parsing.rs  main.rs
crates/etl-ingest/src/handler/: aggregation_task.rs  lp_lender_state.rs  lp_pool_state.rs  ls_loan_closing.rs  ls_state.rs  mod.rs  mp_assets.rs  pl_state.rs  send_push.rs  tr_state.rs  wasm_lp_deposit.rs  wasm_lp_withdraw.rs  wasm_ls_auto_close_position.rs  wasm_ls_close.rs  wasm_ls_close_position.rs  wasm_ls_liquidation.rs  wasm_ls_liquidation_warning.rs  wasm_ls_open.rs  wasm_ls_repay.rs  wasm_ls_slippage_anomaly.rs  wasm_reserve_cover_loss.rs  wasm_tr_profit.rs  wasm_tr_rewards.rs
crates/etl-ingest/src/provider/: event.rs  mod.rs  synchronization.rs
migration/mysql/: action_history.sql  block.sql  lp_deposit.sql  lp_lender_state.sql  lp_pool.sql  lp_pool_state.sql  lp_withdraw.sql  ls_closing.sql  ls_liquidation.sql  ls_opening.sql  ls_repayment.sql  ls_state.sql  mp_asset.sql  mp_asset_mapping.sql  mp_asset_state.sql  mp_yield.sql  pl_state.sql  tr_profit.sql  tr_rewards_distribution.sql  tr_state.sql
migration/postgresql/: action_history.sql  block.sql  indexes.sql  indexes_v2.sql  lp_deposit.sql  lp_lender_state.sql  lp_pool.sql  lp_pool_state.sql  lp_withdraw.sql  ls_auto_close_position.sql  ls_close_position.sql  ls_closing.sql  ls_liquidation.sql  ls_liquidation_warning.sql  ls_loan_closing.sql  ls_loan_collect.sql  ls_opening.sql  ls_opening_precompute.sql  ls_repayment.sql  ls_slippage_anomaly.sql  ls_state.sql  mp_asset.sql  mp_asset_mapping.sql  mp_asset_state.sql  mp_yield.sql  pl_state.sql  pool_config.sql  pool_config_data.sql  raw_message.sql  reserve_cover_loss.sql  subscription.sql  tr_profit.sql  tr_rewards_distribution.sql  tr_state.sql
migrations/: V001__initial_schema.sql  V002__pool_config_data.sql  V003__ls_opening_precompute.sql  V004__indexes.sql  V005__indexes_v2.sql  V006__on_conflict_constraints.sql  V007__fix_pool_config_protocol.sql  V008__currency_protocol_registry.sql  V009__fix_registry_column_sizes.sql  V010__add_liquidation_price.sql  V011__backfill_liquidation_prices.sql  V012__pool_config_active_columns.sql  V013__backfill_pool_config_stable_currency.sql  V014__currency_protocol_table.sql  V015__currency_protocol_symbols.sql  V016__restore_deprecated_currency_protocol.sql  V017__backfill_deprecated_currency_protocol_symbols.sql
public/: endoints.json  endpoints.json  index.html
scripts/: compare-endpoints.sh  deep-compare.sh
src/: cache.rs  cache_keys.rs  cli.rs  configuration.rs  custom_uint.rs  error.rs  futures_set.rs  helpers.rs  lib.rs  main.rs  migration.rs  openapi.rs  server.rs
src/controller/: admin.rs  backfill_ls_opening.rs  blocks.rs  borrow_apr.rs  borrowed.rs  buyback.rs  buyback_total.rs  current_lenders.rs  daily_positions.rs  deposit_suspension.rs  distributed.rs  earn_apr.rs  earnings.rs  get_position_debt_value.rs  historical_lenders.rs  historically_liquidated.rs  historically_opened.rs  historically_repaid.rs  history_stats.rs  incentives_pool.rs  interest_repayments.rs  lease_value_stats.rs  leased_assets.rs  leases.rs  leases_monthly.rs  leases_search.rs  liquidations.rs  liquidity.rs  loans_by_token.rs  loans_granted.rs  lp_withdraw.rs  ls_loan_closing.rs  ls_opening.rs  ls_openings.rs  max_lp_ratio.rs  max_ls_interest_7d.rs  metrics.rs  misc.rs  mod.rs  monthly_active_wallets.rs  (+39 more)
src/dao/: mod.rs
src/handler/: _ls_loan_closing  aggregation_task.rs  cache_refresher.rs  cache_state.rs  lp_lender_state.rs  lp_pool_state.rs  ls_loan_closing.rs  ls_state.rs  mod.rs  mp_assets.rs  mp_assets_state.rs  mp_map_assets.rs  pl_state.rs  send_push.rs  tr_state.rs  wams_reserve_cover_loss.rs  wasm_lp_deposit.rs  wasm_lp_withdraw.rs  wasm_ls_auto_close_position.rs  wasm_ls_close.rs  wasm_ls_close_position.rs  wasm_ls_liquidation.rs  wasm_ls_liquidation_warning.rs  wasm_ls_open.rs  wasm_ls_repay.rs  wasm_ls_slippage_anomaly.rs  wasm_reserve_cover_loss.rs  wasm_tr_profit.rs  wasm_tr_rewards.rs
src/model/: action_history.rs  block.rs  borrow_apr.rs  buyback.rs  cached_responses.rs  leased_asset.rs  leases_monthly.rs  lp_deposit.rs  lp_lender_state.rs  lp_pool.rs  lp_pool_state.rs  lp_withdraw.rs  ls_amount.rs  ls_auto_close_position.rs  ls_close_position.rs  ls_closing.rs  ls_liquidation.rs  ls_liquidation_warning.rs  ls_loan_closing.rs  ls_loan_collect.rs  ls_opening.rs  ls_realized_pnl_data.rs  ls_repayment.rs  ls_slippage_anomaly.rs  ls_state.rs  messages.rs  mod.rs  models.rs  mp_asset.rs  mp_asset_mapping.rs  mp_asset_state.rs  mp_yield.rs  pl_state.rs  pnl_over_time.rs  pool_config.rs  position.rs  raw_message.rs  raw_msg_params.rs  raw_tx_params.rs  reserve_cover_loss.rs  (+10 more)
src/node/: mod.rs  query_wasm.rs
src/provider/: database.rs  event.rs  event_new.rs  grpc.rs  http.rs  mod.rs  query_api.rs  synchronization.rs  synchronization_new.rs
src/types/: amount.rs  (+44 more)
(+58 files in other folders)
