[package]
name = "etl"
version = "3.8.1"
edition = "2021"
rust-version = "1.79.0"

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false

[dependencies]

actix-web = { version = "4.10" }
actix-cors = "0.7"
actix-files = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
] }

cosmrs = { version = "0.22", default-features = false, features = [
    "grpc",
    "bip32",
    "cosmwasm"
] }

tonic = { version = "0.13", default-features = false, features = [
    "channel",
    "gzip",
    "prost",
    "tls-native-roots",
    "transport",
    "zstd",
] }

chrono = { version = "0.4", features = ["serde"] }
cosmos-sdk-proto = { version = "0.27", features = ["cosmwasm", "grpc-transport",] }
prost = { version = "0.13", features = ["derive",] }
bigdecimal = { version = "0.4", features = ["serde"] }
tendermint-rpc = { version = "0.40", features = ["websocket-client"] }

url = "2.5"
base64 = "0.22"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
sha256 = "1.6.0"
ibc-proto = "0.51.0"

[features]
default = ["mainnet"]
mainnet = []
testnet = []
