[workspace]
members = ["crates/etl-core", "crates/etl-ingest", "crates/etl-api"]
resolver = "2"

[workspace.package]
version = "4.0.0"
edition = "2021"
rust-version = "1.79.0"

[profile.dev]
debug = 0

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false

[workspace.dependencies]
# Internal crates
etl-core = { path = "crates/etl-core" }

# Web framework
actix-web = { version = "4.12" }
actix-http = "3.11.2"
actix-cors = "0.7"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "bigdecimal",
] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

# Cosmos/blockchain
cosmrs = { version = "0.22", default-features = false, features = [
    "grpc",
    "bip32",
    "cosmwasm",
] }
cosmos-sdk-proto = { version = "0.27", features = ["cosmwasm", "grpc-transport"] }
prost = { version = "0.14", features = ["derive"] }
tendermint-rpc = { version = "0.40", features = ["websocket-client"] }
ibc-proto = "0.52.0"

# gRPC
tonic = { version = "0.13", default-features = false, features = [
    "channel",
    "gzip",
    "prost",
    "tls-native-roots",
    "transport",
    "zstd",
] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Data types
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Push notifications
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
ece = "2.3.1"

# Configuration
dotenvy = "0.15"

# Caching
moka = { version = "0.12", features = ["future"] }

# Utilities
url = "2.5"
base64 = "0.22"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
sha256 = "1.6.0"
