[package]
name = "etl-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "etl-api"
path = "src/main.rs"

[dependencies]
etl-core = { workspace = true }

# Web framework
actix-web = { workspace = true }
actix-http = { workspace = true }
actix-cors = { workspace = true }
actix-files = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Data types
chrono = { workspace = true }
bigdecimal = { workspace = true }

# Async
futures = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
