[package]
name = "etl-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Database
sqlx = { workspace = true }
refinery = { workspace = true }
tokio-postgres = { workspace = true }

# Cosmos/blockchain
cosmrs = { workspace = true }
cosmos-sdk-proto = { workspace = true }
prost = { workspace = true }
ibc-proto = { workspace = true }

# gRPC
tonic = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Data types
chrono = { workspace = true }
bigdecimal = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Push notifications (error types)
jsonwebtoken = { workspace = true }
ece = { workspace = true }

# Caching
moka = { workspace = true }

# Utilities
url = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sha256 = { workspace = true }
